--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
   test:
     name: Tests (core)
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: ${{ github.workspace }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,7 +28,7 @@ jobs:
       - name: Install deps (test-only)
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt requests
+          pip install -r requirements.txt -r requirements-dev.txt
 
       - name: Run tests
         run: pytest -q
