--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
     name: Build macOS app
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: macos-latest
+    permissions:
+      contents: write
     env:
       APP_NAME: API Test Tray
       MAC_CERT_P12: ${{ secrets.MAC_CERT_P12 }}
